--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <!-- CSS Style -->
   <link rel="stylesheet" href="css/style.css">
 
-  <!-- ----Bootstrap Liink---- -->
+  <!-- ----Bootstrap Link---- -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 <body>
@@ -22,11 +22,11 @@
                         <img class="images" src="images/money.jpg" alt="">
                   </div>
                   <div class="col-md-6">
-                    <form class="text-center calculation">
+                    <div class="text-center calculation pb-5">
                         <div class="mb-3 pt-5">
                           <h5 class="text-center text-uppercase mb-3">Income</h5>
                           <label class="form-label">Income:<label>
-                          <input type="text" class="form-control ms-4">
+                          <input type="text" id="income" class="form-control ms-4">
                       </div>
 
                         <div class="mb-3">
@@ -43,7 +43,7 @@
                           <input type="text" class="form-control ms-4">
                       </div>
                         
-                      <div class="pb-4">
+                      <div class="pb-4 mb-3">
                         <button class="bg-info fw-bold w-25 p-2 fs-6 border-0 text-white shadow">Calculate</button>
                       </div>
                       <div>
@@ -53,9 +53,9 @@
                          <h5>Balance: 5000</h5>
                       </div>
 
-                     <div class="mb-3">
+                     <div class="mb-3 pt-5 mb-5">
                          <label class="form-label">Save: <label>
-                         <input type="text" class="form-control"> %<button class="ms-2 p-2 text-white border-0 bg-info fw-bold">Save</button>
+                         <input type="text" class="save-input"> %<button class="ms-2 text-white btn btn-primary fw-bold">Save</button>
                     </div>
                     <div>
                       <h5>Saving Amount: 2000</h5>
@@ -63,7 +63,7 @@
                    <div>
                       <h5>Remaining Balance: 2500</h5>
                    </div>
-                    </form>
+                    </div>
                   </div>
             </div>
           
