--- a/index.html
+++ b/index.html
@@ -32,25 +32,25 @@
                         <div class="mb-3">
                           <h5 class="text-center text-uppercase mb-3">Expenses</h5>
                           <label class="form-label">Food:<label>
-                          <input type="text" class="form-control ms-4">
+                          <input id="food-input" type="text" class="form-control ms-4">
                       </div>
                         <div class="mb-3">
                           <label class="form-label">Rent:<label>
-                          <input type="text" class="form-control ms-4">
+                          <input id="rent-input" type="text" class="form-control ms-4">
                       </div>
                         <div id="clothes" class="mb-3">
                           <label class="form-label">Clothes:<label>
-                          <input type="text" class="form-control ms-4">
+                          <input id="clothes-input" type="text" class="form-control ms-4">
                       </div>
                         
                       <div class="pb-4 mb-3">
-                        <button class="bg-info fw-bold w-25 p-2 fs-6 border-0 text-white shadow">Calculate</button>
+                        <button id="calculate" class="bg-info fw-bold w-25 p-2 fs-6 border-0 text-white shadow">Calculate</button>
                       </div>
                       <div>
-                         <h5>Total Expenses: 5000</h5>
+                         <h5>Total Expenses: <span id="total-expenses">0</span></h5>
                       </div>
                       <div>
-                         <h5>Balance: 5000</h5>
+                         <h5>Balance: 0</h5>
                       </div>
 
                      <div class="mb-3 pt-5 mb-5">
