--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                         <div class="mb-3 pt-5">
                           <h5 class="text-center text-uppercase mb-3">Income</h5>
                           <label class="form-label">Income:<label>
-                          <input type="text" id="income" class="form-control ms-4">
+                          <input type="text" id="income-input" class="form-control ms-4">
                       </div>
 
                         <div class="mb-3">
@@ -50,7 +50,7 @@
                          <h5>Total Expenses: <span id="total-expenses">0</span></h5>
                       </div>
                       <div>
-                         <h5>Balance: 0</h5>
+                         <h5>Balance: <span id="total-balance">0</span></h5>
                       </div>
 
                      <div class="mb-3 pt-5 mb-5">
