--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
    <header> 
-          <h1 class="fw-bold text-center pt-5 pb-5">Monthly Calculation</h1>
+          <h1 class="fw-bold text-center pt-5 pb-5">Monthly Income Calculation</h1>
    </header>
   
     <section class="container">
